--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        applicationId "com.stupidbeauty.builtinftp.demo"
+        applicationId "com.stupidbeauty.hxftpserver"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 4499
@@ -32,6 +32,6 @@ dependencies {
     implementation 'com.stupidbeauty:VictoriaFresh:2020.7.27'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.github.hxcan:builtinftp:2021.9.60'
+    implementation 'com.github.hxcan:ftpserver:2021.10.15'
     compile 'com.upokecenter:cbor:4.2.0'
 }
