--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:icon="@drawable/ic_launcher"
+              android:name="com.stupidbeauty.hxlauncher.application.HxLauncherApplication"
+
         android:label="@string/app_name">
         <activity android:name="com.stupidbeauty.builtinftp.demo.LauncherActivity" 
             android:theme="@style/AppTheme"
