--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,24 +1,29 @@
 apply plugin: 'com.android.application'
 
-android {
-  compileOptions {
+android 
+{
+  compileOptions 
+  {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
   }
 
   compileSdkVersion 29
 
-  defaultConfig {
+  defaultConfig 
+  {
     buildToolsVersion = "30.0.3"
     applicationId "com.stupidbeauty.hxftpserver"
     minSdkVersion 21
     targetSdkVersion 29
-    versionCode 4563
-    versionName "4563.2022.4.6"
+    versionCode 4580
+    versionName "4580.2022.6.17"
   }
 
-  buildTypes {
-    release {
+  buildTypes 
+  {
+    release 
+    {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
@@ -27,12 +32,13 @@ android {
   return void
 }
 
-dependencies {
+dependencies 
+{
   compile 'com.jakewharton:butterknife:7.0.1'
   annotationProcessor 'com.jakewharton:butterknife:7.0.1'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
   implementation 'androidx.appcompat:appcompat:1.2.0'
-  implementation 'com.github.hxcan:ftpserver:2022.6.8'
+  implementation 'com.github.hxcan:ftpserver:2022.6.23'
   compile 'com.github.hxcan:rotatingactiveuser:2021.11.30'
   compile 'com.upokecenter:cbor:4.2.0'
   implementation 'com.github.hxcan:voiceui:2022.5.15'
