Support wifi tethering hotspot mode

--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,14 @@ buildscript {
     }
 }
 
-allprojects {
-    repositories {
-        jcenter()
-        google()
-        maven { url "https://jitpack.io" }
-    }
+allprojects 
+{
+  repositories 
+  {
+    jcenter()
+    google()
+    maven { url "https://jitpack.io" }
+  }
 }
 
 repositories {
