--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,18 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript 
+{
+  ext.kotlin_version = '1.1.4-3'
 
-buildscript {
-    ext.kotlin_version = '1.1.4-3'
+  repositories 
+  {
+    jcenter()
+    google()
 
-    repositories {
-        jcenter()
-        google()
-
-        maven { url "https://jitpack.io" }
-//        maven { url "https://www.jitpack.io" }
-
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
-    }
+    maven { url "https://jitpack.io" }
+  }
+  dependencies 
+  {
+    classpath 'com.android.tools.build:gradle:4.1.3'
+  }
 }
 
 allprojects 
@@ -26,6 +25,7 @@ allprojects
   }
 }
 
-repositories {
-    mavenCentral()
+repositories 
+{
+  mavenCentral()
 }
