--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
   
-  <application android:icon="@drawable/ic_launcher" android:name="com.stupidbeauty.hxlauncher.application.HxLauncherApplication" android:label="@string/app_name">
+  <application android:icon="@drawable/ic_launcher" android:name="com.stupidbeauty.hxlauncher.application.HxLauncherApplication" android:label="@string/app_name"
+    android:requestLegacyExternalStorage="true"
+    >
     <activity android:name="com.stupidbeauty.builtinftp.demo.LauncherActivity" android:theme="@style/AppTheme" android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
