Start the support of android 11

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,10 +15,10 @@ android
     buildToolsVersion = "30.0.3"
     applicationId "com.stupidbeauty.hxftpserver"
     minSdkVersion 21
-    targetSdkVersion 29
+    targetSdkVersion 30
     versionCode 4620
     versionName "4620.2022.11.24"
-  }
+  } // defaultConfig 
 
   buildTypes 
   {
@@ -38,7 +38,12 @@ dependencies
   annotationProcessor 'com.jakewharton:butterknife:7.0.1'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
   implementation 'androidx.appcompat:appcompat:1.2.0'
-  implementation 'com.github.hxcan:ftpserver:2023.3.3'
+//   implementation 'androidx.appcompat:appcompat:1.2.0'
+//   implementation 'com.github.hxcan:ftpserver:2023.3.3'
+
+//   implementation 'com.github.hxcan:ftpserver:10-android-11-storage-access-framework-support-SNAPSHOT'
+  implementation 'com.github.hxcan:ftpserver:71d54e4'
+  
   compile 'com.github.hxcan:rotatingactiveuser:2021.11.30'
   compile 'com.upokecenter:cbor:4.2.0'
   implementation 'com.github.hxcan:voiceui:2022.12.6'
