--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,8 @@ android
     targetCompatibility JavaVersion.VERSION_1_8
   }
 
-  compileSdkVersion 29
+//   compileSdkVersion 29
+  compileSdkVersion 30
 
   defaultConfig 
   {
@@ -16,8 +17,9 @@ android
     applicationId "com.stupidbeauty.hxftpserver"
     minSdkVersion 21
     targetSdkVersion 30
-    versionCode 4620
-    versionName "4620.2022.11.24"
+//     targetSdkVersion 27
+    versionCode 4623
+    versionName "4623.2023.4.4"
   } // defaultConfig 
 
   buildTypes 
@@ -38,13 +40,13 @@ dependencies
   annotationProcessor 'com.jakewharton:butterknife:7.0.1'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
   implementation 'androidx.appcompat:appcompat:1.2.0'
-//   implementation 'androidx.appcompat:appcompat:1.2.0'
 //   implementation 'com.github.hxcan:ftpserver:2023.3.3'
 
-//   implementation 'com.github.hxcan:ftpserver:10-android-11-storage-access-framework-support-SNAPSHOT'
-  implementation 'com.github.hxcan:ftpserver:71d54e4'
+  implementation 'com.github.hxcan:ftpserver:9004051'
   
   compile 'com.github.hxcan:rotatingactiveuser:2021.11.30'
   compile 'com.upokecenter:cbor:4.2.0'
   implementation 'com.github.hxcan:voiceui:2022.12.6'
+  implementation 'com.github.hxcan:CodePosition:2023.3.29'
+  compile 'com.patrickpissurno:ripple-effect:1.3.1'
 }
