--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,5 +15,14 @@
         
     <service android:name="com.stupidbeauty.hxlauncher.service.DownloadNotificationService" android:exported="true" tools:ignore="ExportedService">
     </service>
+    <activity android:name="com.stupidbeauty.hxlauncher.activity.ApplicationInformationActivity"
+      android:theme="@style/AppTheme" 
+              android:launchMode="singleInstance" />
+    <activity android:name="com.stupidbeauty.hxlauncher.SettingsActivity" android:label="@string/hxLauncherSettings" >
+    </activity>
+    <activity android:name="com.stupidbeauty.hxlauncher.activity.AccountActivity" android:label="@string/setRootDirectoryunt" 
+      android:theme="@style/AppTheme" 
+              />
+    <activity android:name="com.stupidbeauty.hxlauncher.AutoRunSettingsActivity" android:theme="@android:style/Theme.Holo.Light"/>
   </application>
 </manifest>
