--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,17 +36,18 @@ android
 
 dependencies 
 {
-  compile 'com.jakewharton:butterknife:7.0.1'
+  implementation 'com.jakewharton:butterknife:7.0.1'
   annotationProcessor 'com.jakewharton:butterknife:7.0.1'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
   implementation 'androidx.appcompat:appcompat:1.2.0'
-//   implementation 'com.github.hxcan:ftpserver:2023.3.3'
+  implementation 'com.github.hxcan:ftpserver:2023.4.12'
 
-  implementation 'com.github.hxcan:ftpserver:9004051'
+//   implementation 'com.github.hxcan:ftpserver:9004051'
   
-  compile 'com.github.hxcan:rotatingactiveuser:2021.11.30'
-  compile 'com.upokecenter:cbor:4.2.0'
+  implementation 'com.github.hxcan:rotatingactiveuser:2021.11.30'
+  implementation 'com.upokecenter:cbor:4.2.0'
   implementation 'com.github.hxcan:voiceui:2022.12.6'
   implementation 'com.github.hxcan:CodePosition:2023.3.29'
-  compile 'com.patrickpissurno:ripple-effect:1.3.1'
+  implementation 'com.patrickpissurno:ripple-effect:1.3.1'
+  implementation "androidx.documentfile:documentfile:1.0.1"
 }
