--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,11 @@ apply plugin: 'com.android.application'
 
 android 
 {
+  lint
+  {
+    baseline = file("lint-baseline.xml")
+  }
+
   compileOptions 
   {
     sourceCompatibility JavaVersion.VERSION_1_8
@@ -16,8 +21,8 @@ android
     applicationId "com.stupidbeauty.hxftpserver"
     minSdkVersion 21
     targetSdkVersion 30
-    versionCode 4623
-    versionName "4623.2023.4.4"
+    versionCode 4673
+    versionName "4673.2023.7.8"
   } // defaultConfig 
 
   buildTypes 
@@ -40,15 +45,15 @@ dependencies
   implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
   implementation 'androidx.appcompat:appcompat:1.2.0'
   implementation 'com.github.hxcan:upgrademanager:2023.5.8'
-  implementation 'com.github.hxcan:ftpserver:2023.7.10'
+  implementation 'com.github.hxcan:ftpserver:2023.7.12'
   implementation 'com.github.hxcan:feedback:2023.6.35'
 
 //   implementation 'com.github.hxcan:ftpserver:0e976e4'
   
   implementation 'com.github.hxcan:rotatingactiveuser:2021.11.30'
   implementation 'com.upokecenter:cbor:4.2.0'
-  implementation 'com.github.hxcan:voiceui:2023.4.27'
-  implementation 'com.github.hxcan:CodePosition:2023.3.29'
+  implementation 'com.github.hxcan:voiceui:2023.6.27'
+  implementation 'com.github.hxcan:CodePosition:2023.5.19'
   implementation 'com.patrickpissurno:ripple-effect:1.3.1'
   implementation "androidx.documentfile:documentfile:1.0.1"
 }
