--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,10 +45,10 @@ dependencies
   implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
   implementation 'androidx.appcompat:appcompat:1.2.0'
   implementation 'com.github.hxcan:upgrademanager:2023.5.8'
-//   implementation 'com.github.hxcan:ftpserver:2023.9.8'
+  implementation 'com.github.hxcan:ftpserver:2023.10.32'
   implementation 'com.github.hxcan:feedback:2023.10.24'
 
-  implementation 'com.github.hxcan:ftpserver:3b21c14'
+//   implementation 'com.github.hxcan:ftpserver:3b21c14'
   
   implementation 'com.github.hxcan:rotatingactiveuser:2021.11.30'
   implementation 'com.upokecenter:cbor:4.2.0'
