--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,13 @@
 <manifest xmlns:tools="http://schemas.android.com/tools" package="com.stupidbeauty.builtinftp.demo" xmlns:android="http://schemas.android.com/apk/res/android">
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
   <application android:icon="@drawable/ic_launcher" android:name="com.stupidbeauty.hxlauncher.application.HxLauncherApplication" android:label="@string/app_name"
     android:requestLegacyExternalStorage="true"
     >
-    <activity android:name="com.stupidbeauty.builtinftp.demo.LauncherActivity" android:theme="@style/AppTheme" android:label="@string/app_name">
+    <activity android:name="com.stupidbeauty.builtinftp.demo.LauncherActivity" android:theme="@style/AppTheme" android:label="@string/app_name"
+      android:exported="true"
+    >
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
@@ -25,7 +28,9 @@
     <activity  android:screenOrientation="portrait" 
       android:name="com.stupidbeauty.pdflearn.activity.PdfLearnActivity"
       android:launchMode="singleInstance" 
-      android:windowSoftInputMode="adjustResize" >
+      android:windowSoftInputMode="adjustResize" 
+      android:exported="true"
+    >
       <intent-filter>
         <action android:name="android.intent.action.SEND" />
         <category android:name="android.intent.category.DEFAULT" />
