--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
   <application android:icon="@drawable/ic_launcher" android:name="com.stupidbeauty.hxlauncher.application.HxLauncherApplication" android:label="@string/app_name"
     android:requestLegacyExternalStorage="true"
     >
