--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,12 @@
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-  <application android:icon="@drawable/ic_launcher" android:name="com.stupidbeauty.hxlauncher.application.HxLauncherApplication" android:label="@string/app_name"
+  <application 
+    android:icon="@drawable/ic_launcher" 
+    android:name="com.stupidbeauty.hxlauncher.application.HxLauncherApplication" 
+    android:label="@string/app_name"
     android:requestLegacyExternalStorage="true"
-    >
+  >
     <activity android:name="com.stupidbeauty.builtinftp.demo.LauncherActivity" android:theme="@style/AppTheme" android:label="@string/app_name"
       android:exported="true"
     >
