--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies
   implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
   implementation 'androidx.appcompat:appcompat:1.2.0'
   implementation 'com.github.hxcan:upgrademanager:2024.8.25'
-  implementation 'com.github.hxcan:ftpserver:2025.5.26'
+  implementation 'com.github.hxcan:ftpserver:2025.8.11'
   implementation 'com.github.hxcan:feedback:2023.10.24'
   implementation 'com.github.hxcan:rotatingactiveuser:2023.9.8'
   implementation 'com.upokecenter:cbor:4.2.0'
@@ -62,7 +62,7 @@ dependencies
   implementation group:  'commons-io', name: 'commons-io',  version: '2.4'
   implementation group: 'commons-codec', name: 'commons-codec', version: '1.13'
   implementation 'com.squareup:otto:1.3.8'
-  implementation group: 'com.simplify',name:'ink',version:'0.2.1',ext:'aar'
+//   implementation group: 'com.simplify',name:'ink',version:'0.2.1',ext:'aar'
 }
 
 // # https://stackoverflow.com/questions/65380359/lomboks-access-to-jdk-compilers-internal-packages-incompatible-with-java-16
