--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,11 @@ org.gradle.daemon=false
 # @BindView requires a constant resource ID
 android.nonFinalResIds=false
 
-systemProp.socksProxyHost=127.0.0.1
-systemProp.socksProxyPort = 7070
+# systemProp.socksProxyHost=127.0.0.1
+# systemProp.socksProxyPort = 7070
 # systemProp.socksProxyPort=9090
+
+# systemProp.http.proxyHost=127.0.0.1
+# systemProp.http.proxyPort=8118
+# systemProp.https.proxyHost=127.0.0.1
+# systemProp.https.proxyPort=8118
